--- a/analyses.qmd
+++ b/analyses.qmd
@@ -4,23 +4,65 @@ format: html
 editor: visual
 ---
 
-## Quarto
+## Analyses Tree Density
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+Intro to the ms.
 
-## Running Code
+## Import data
 
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+Import data from Natron. Marc did a pivot table in excel
 
-```{r}
-1 + 1
+```{r Loadpackages, warning=FALSE}
+library(tidyverse)
+library(readxl)
+library(DT)
 ```
 
-You can add options to executable code like this
-
 ```{r}
-#| echo: false
-2 * 2
+Data <- read_excel("data/DensityAnno2023.xlsx")
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+Subset rows (20) and columns (10)
+
+```{r}
+DT::datatable(Data[1:20,1:10])
+```
+
+## Clean data
+
+```{r}
+library(dplyr)
+   
+Data <- rename(Data,heightclass=`height class 50cm (categorical)` )
+```
+
+## Explore data
+
+Check if the datafile is ok
+
+```{r}
+table(Data$Region)
+```
+
+NB. Wrong data. Only Trøndelag included
+
+```{r}
+table(Data$Year, Data$Plot)
+```
+
+## Figures
+
+```{r}
+Data %>%
+  filter(heightclass==7)%>%
+  ggplot()+
+  geom_violin(aes(x=factor(Year),
+                 y=Quantity
+                 ),
+              fill = "yellow")+
+  facet_wrap(.~Treatment,
+             ncol=1,
+             scales = "free")+
+  theme_bw(base_size = 15)
+  
+```
