--- a/analyses.qmd
+++ b/analyses.qmd
@@ -56,6 +56,74 @@ Plot NW, NE, SW, SE referes to plot names in Hedmark-Akershus and corresponds to
 
 ## Figures
 
+A scatter plot and loess smoother showing the development of larger birch trees over time. 
+```{r}
+Data %>%
+  filter(Taxa == "Betula pubescens", HeightClass > 5)%>%
+  ggplot(aes(x=Year,y=Quantity))+
+  geom_jitter(
+             size=3,
+             width=0.1,
+             alpha=0.1)+
+  geom_smooth(method = "loess",
+              se=F)+
+  facet_grid(cols=vars(Treatment),
+             rows=vars(Region),
+             #ncol=1,
+             scales = "free_y")+
+  theme_bw(base_size = 12)
+  
+```
+
+We can look at species differences, and at the same time reduce the amount of points by taking the mean per location and treatement.
+```{r, warning=F}
+Data %>%
+  filter(HeightClass > 5,
+         Taxa %in% c("Betula pubescens", "Picea abies", "Pinus sylvestris", "Sorbus aucuparia"))%>%
+  group_by(LocalityCode, Year, Taxa, Treatment)%>%
+  summarise(Quantity = mean(Quantity)) %>%
+  ggplot(aes(x=Year,y=Quantity, colour=Treatment, fill=Treatment))+
+  geom_jitter(
+             size=3,
+             width=0.1,
+             alpha=0.4)+
+  geom_smooth(method = "loess",
+              se=F)+
+  facet_wrap(.~Taxa)+
+  theme_bw(base_size = 12)
+```
+In the figure above we see little obvious differences in birch, pine and spruce, but large differences in rowan.
+
+Since there is auto correlation (repeated measures at the same locatins every year), we could chose to visualise this as lines arther than points.
+
+```{r, warning=F}
+Data %>%
+  filter(HeightClass > 5,
+         Taxa %in% c("Betula pubescens", "Picea abies", "Pinus sylvestris", "Sorbus aucuparia"))%>%
+  group_by(LocalityCode, Year, Taxa, Treatment)%>%
+  summarise(Quantity = mean(Quantity)) %>%
+  ggplot(aes(x=Year,y=Quantity, group=LocalityCode))+
+  geom_line(alpha=0.8)+
+  facet_grid(rows = vars(Taxa),
+             cols=vars(Treatment))+
+  theme_bw(base_size = 12)
+```
+
+We could look at the same thing, but for the smalles height class
+```{r, warning=F}
+Data %>%
+  filter(HeightClass ==1,
+         Taxa %in% c("Picea abies", "Sorbus aucuparia"))%>%
+  group_by(LocalityCode, Year, Taxa, Treatment)%>%
+  summarise(Quantity = mean(Quantity)) %>%
+  ggplot(aes(x=Year,y=Quantity, group=LocalityCode))+
+  geom_line(alpha=0.8)+
+  facet_grid(rows = vars(Taxa),
+             cols=vars(Treatment),
+             scales="free")+
+  theme_bw(base_size = 12)
+```
+
 ```{r}
 Data %>%
   filter(Region=='SUSTHERB Telemark',EngelskNavn=='Pine' )%>%
